      icmpv6-redirect).

  c) Wireless Mesh Networking models:
    - General multi-interface mesh stack infrastructure (devices/mesh module).
    - IEEE 802.11s (Draft 3.0) model including Peering Management Protocol and HWMP.
    - Forwarding Layer for Meshing (FLAME) protocol.

  d) Nix-vector routing:  
    - Ipv4NixVectorHelper
    - Examples (nix-simple, nms-p2p-nix)

API changes from ns-3.5
-----------------------
API changes for this release are documented in the file CHANGES.html. 
XXX

Known issues
------------
ns-3 build is known to fail on the following platforms:
  - gcc 3.3 and earlier
  - optimized builds on gcc 3.4.4 and 3.4.5
  - optimized builds on linux x86 gcc 4.0.x

Future releases
---------------
XXX

Release 3.5
===========

Availability
------------
This release is immediately available from:
http://www.nsnam.org/releases/ns-allinone-3.5.tar.bz2

Supported platforms
-------------------
ns-3.5 has been tested on the following platforms:
  - linux x86 gcc 4.2, 4.1, and, 3.4.6.
  - linux x86_64 gcc 4.4.0, 4.3.2, 4.2.3, 4.2.1, 4.1.3, 3.4.6
  - MacOS X ppc and x86 (gcc 4.0.x and 4.2.x)
  - cygwin gcc 3.4.4 (debug only), gcc 4.3.2 (debug and optimized)
  - mingw gcc 3.4.5 (debug only)

Not all ns-3 options are available on all platforms; consult the
wiki for more information:
http://www.nsnam.org/wiki/index.php/Installation

New user-visible features
-------------------------

  a) 802.11 MAC:
     - EDCA multi-qos-class support (Mirko Banchi)
     - 802.11n initial support for A-MSDU frame aggregation (Mirko Banchi)
     - aarf-cd and cara rate control algorithms (Federico Maguolo)
  b) 802.11 PHY:
     - 802.11b PHY support (Gary Pei)
     - Nakagami propagation loss model (Timo Bingmann)
     - radiotap and prism headers for PCAP output (Nicola Baldo)
  c) RandomVariable:
     - GammaVariable and ErlangVariable (Timo Bingmann)
     - ZipfVariable (Francesco Malandrino)
  d) UdpEcho: allows setting the payload of echo packets